[package]
name = "Cryptopals"
version = "0.1.0"
authors = ["mclean"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
hex = "0.4.0"
base64 = "0.11.0"
itertools = "0.8.2"
hashbrown = "0.3"
openssl = "0.10.26"
rand = "0.7.3"